--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -67,20 +67,33 @@
       <!-- Links -->
       <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown">
-          <a href="#" id="menu" data-toggle="dropdown" class="nav-link dropdown-toggle ">Services</a>
+          <a href="#" id="menu" data-toggle="dropdown" class="nav-link dropdown-toggle">Services</a>
           <ul class="dropdown-menu mt-2 p-0 rounded-0  border-0 z-depth-1">
             <li class="dropdown-item p-0 pt-2">
-              <a class="" href="#">My Files</a>
+              <a class="d-flex justify-content-between services-cards" href="#">
+                <div class="mr-4 flex-wrap" style="max-width: 50%;">
+                  <div class="h6 font-weight-bold" style="color: #a383ff;">Monthly</div>
+                  <div class="mt-2">Professional <br>transcriptionists</div>
+                </div>
+                <div class="mr3 text-right">
+                  <div class="h4" style="color: #a383ff;">1$</div>
+                  <div>per minute</div>
+                </div>
+              </a>
             </li>
             <li class="dropdown-item p-0">
-              <a href="#" class="">Order History</a>
+              <a class="d-flex justify-content-between services-cards" href="#">
+                <div class="mr-4 flex-wrap" style="max-width: 50%;">
+                  <div class="h6 font-weight-bold" style="color: #fdcc02;">One-off</div>
+                  <div class="mt-2">Professional <br>transcriptionists</div>
+                </div>
+                <div class="mr3 text-right">
+                  <div class="h4" style="color: #fdcc02;">1$</div>
+                  <div>per minute</div>
+                </div>
+              </a>
             </li>
-            <li class="dropdown-item p-0">
-              <a href="#" class="">Manage Team</a>
-            </li>
-            <li class="dropdown-item p-0">
-              <a href="#" class="">Settings</a>
-            </li>
+
           </ul>
         </li>
         <li class="nav-item">
