--- a/resources/views/settings.twig
+++ b/resources/views/settings.twig
@@ -78,12 +78,20 @@
     </div>
   </div>
   <div class="settings">
-    <h2>Integration Settings</h2>
-    <div class="field-set">
-      <h5>Linked Accounts</h5>
-    </div>
-    <div class="">
-      <a class="btn red-button">LINK NEW ACCOUNT</a>
+    <h2>Membership Settings</h2>
+    <div class="row">
+      <div class="col">
+        <a class="btn gray-button">PAUSE MEMBERSHIP</a>
+        <p>Lorem ipsum dolor sit amet consectetur adipis icing elit. Repudiandae odio porr</p>
+      </div>
+      <div class="col-1 d-flex justify-content-center">
+        <div style="min-height: 100%; background: gray; width:1px">
+        </div>
+      </div>
+      <div class="col">
+        <a class="btn gray-button">CANCEL MEMBERSHIP</a>
+        <p>Lorem ipsum dolor sit amet consectetur adipis icing elit. Repudiandae odio porr</p>
+      </div>
     </div>
   </div>
   <div class="settings">
