--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -76,8 +76,8 @@
                   <div class="mt-2">Professional <br>transcriptionists</div>
                 </div>
                 <div class="mr3 text-right">
-                  <div class="h4" style="color: #a383ff;">1$</div>
-                  <div>per minute</div>
+                  <div class="h4" style="color: #a383ff;">$1</div>
+                  <div style="font-size: 14px; font-weight: bold">per minute</div>
                 </div>
               </a>
             </li>
@@ -88,8 +88,8 @@
                   <div class="mt-2">Professional <br>transcriptionists</div>
                 </div>
                 <div class="mr3 text-right">
-                  <div class="h4" style="color: #fdcc02;">1$</div>
-                  <div>per minute</div>
+                  <div class="h4" style="color: #fdcc02;">$1</div>
+                  <div style="font-size: 14px; font-weight: bold">per minute</div>
                 </div>
               </a>
             </li>
