--- a/public/styles/sidebar.css
+++ b/public/styles/sidebar.css
@@ -1,4 +1,37 @@
-/*---------- MIS ELEMENTOS *--------------------/
+/*---------- MIS ELEMENTOS --------------------*/
+
+#sidebar {
+    background-color: #f6f9fa;
+    min-height: 100%;
+    padding-right: 0;
+    padding-left: 0;
+    border-right: 1px solid #e6e6e6;
+}
+
+#sidebar nav {
+    margin: 3em 0;
+    padding: 0;
+}
+
+.sidebar-link {
+    font-size: 16px;
+    padding: 0;
+    font-weight: 700 !important;
+    border-right: 2px solid white;
+    transition: .25s;
+}
+
+.sidebar-link:hover {
+    font-weight: 700 !important;
+    border-right: 2px solid #f91c52;
+    color: black;
+}
+
+.sidebar-active {
+    font-weight: 700 !important;
+    color: var(--futures-color) !important;
+
+}
 
 
 /*---------- ELEMENTOS COPIADOS ---------------*/
