--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -145,49 +145,49 @@
             </div>
           </div>
           <div class="sidebar-menu">
-            <div class="sidebar-link {% if active == "tickets" %}sidebar-active{% endif %}">
-              <div class="pt-2">
+            <div class="sidebar-link py-2 {% if active == "tickets" %}sidebar-active{% endif %}">
+              <div class="">
                 <a class="text-link {% if active == "tickets" %}active{% endif %}"
                   href="/thefutures/dashboard/tickets">Place a Request</a>
               </div>
             </div>
-            <div class="sidebar-link {% if active == "status" %}sidebar-active{% endif %}">
-              <div class="pt-2">
+            <div class="sidebar-link py-2 {% if active == "status" %}sidebar-active{% endif %}">
+              <div class="">
                 <a class="text-link {% if active == "satus" %}active{% endif %}"
                   href="/thefutures/dashboard/projects-status">Project Status</a>
               </div>
             </div>
-            <div class="sidebar-link  {% if active == "order" %}sidebar-active{% endif %}">
-              <div class="pt-2">
+            <div class="sidebar-link py-2  {% if active == "order" %}sidebar-active{% endif %}">
+              <div class="">
                 <a class="text-link {% if active == "order" %}active{% endif %}"
                   href="/thefutures/dashboard/order-history">Project History</a>
               </div>
             </div>
-            <div class="sidebar-link {% if active == "manage" %}sidebar-active{% endif %}">
-              <div class="pt-2">
+            <div class="sidebar-link py-2 {% if active == "manage" %}sidebar-active{% endif %}">
+              <div class="">
                 <a class="text-link {% if active == "manage" %}active{% endif %}"
                   href="/thefutures/dashboard/manage-team">Manage Team</a>
               </div>
             </div>
-            <div class="sidebar-link {% if active == "settings" %}sidebar-active{% endif %}">
-              <div class="pt-2">
+            <div class="sidebar-link py-2 {% if active == "settings" %}sidebar-active{% endif %}">
+              <div class="">
                 <a class="text-link {% if active == "settings" %}active{% endif %}"
                   href="/thefutures/dashboard/settings">Account Settings</a>
               </div>
             </div>
-            <div class="sidebar-link">
+            <div class="sidebar-link py-2">
               &nbsp;
             </div>
 
-            <div class="sidebar-link">
-              <div class="pt-2">
+            <div class="sidebar-link py-2">
+              <div class="">
                 <a class="text-link" class="text-link" href="#">
                   Transaction History
                 </a>
               </div>
             </div>
-            <div class="sidebar-link">
-              <div class="pt-2">
+            <div class="sidebar-link py-2">
+              <div class="">
                 <a class="text-link" class="text-link" href="#">
                   Billing Settings
                 </a>
