--- a/public/styles/sidebar.css
+++ b/public/styles/sidebar.css
@@ -109,6 +109,10 @@ body {
 
 /*----------------page-wrapper----------------*/
 
+.page-wrapper {
+    margin-bottom: 4rem;
+}
+
 .page-wrapper .theme {
     width: 40px;
     height: 40px;
