--- a/public/styles/navbar.css
+++ b/public/styles/navbar.css
@@ -4,11 +4,17 @@
     padding: 0 2rem !important;
 }
 
+nav {
+    font-family: 'Brandon Grotesque Bold', sans-serif;
+    font-size: 14px;
+}
+
 .nav-link {
     margin: 0 10px;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: bold;
     color: #8b959e !important;
+    text-transform: uppercase;
 }
 
 .nav-link:hover,
