--- a/public/styles/sidebar.css
+++ b/public/styles/sidebar.css
@@ -14,11 +14,12 @@
 }
 
 .sidebar-link {
-    font-size: 16px;
+    font-size: 14px;
     padding: 0;
     font-weight: 700 !important;
     border-right: 2px solid white;
     transition: .25s;
+    text-transform: uppercase;
 }
 
 .sidebar-link:hover {
