Mejoras en estilo

--- a/resources/views/request.twig
+++ b/resources/views/request.twig
@@ -49,7 +49,7 @@
                             <label for="form1">Title of request</label>
                         </div>
                         <div class="md-form mb-4 pink-textarea active-pink-textarea">
-                            <textarea id="form2" class="md-textarea form-control" rows="3"></textarea>
+                            <textarea id="form2" class="md-textarea form-control" rows="2"></textarea>
                             <label for=" form2">Briefly Description of what you want to see in your project</label>
                         </div>
                         <div>
@@ -57,19 +57,10 @@
                                 We love lists, please list the specific things you wish to see on your piece.
                                 Our creatives are always more efficient when you are able to itemise your requests.
                             </small>
-                            <div class="m-0 md-form">
-                                <textarea id="form7" class="md-textarea form-control" rows="1"></textarea>
-                                <label for="form7">1.</label>
+                            <div class="md-form mb-4 pink-textarea active-pink-textarea">
+                                <textarea id="form3" class="md-textarea form-control" rows="2"></textarea>
+                                <label for="form3">Please list the specific things you wish to see on your piece</label>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleFormControlTextarea2">
-                                <small class="text-muted">
-                                    We love lists, please list the specific things you wish to see on your piece.
-                                    Our creatives are always more efficient when you are able to itemise your requests.
-                                </small></label>
-                            <textarea class="form-control form-control-sm rounded-0" id="exampleFormControlTextarea2"
-                                rows="" placeholder="1."></textarea>
                         </div>
                         <hr>
                         <div>
@@ -89,14 +80,14 @@
                                     <option value="3">Three</option>
                                 </select>
                             </div>
-                            <div class="form-group">
-                                <input class="form-control form-control-sm rounded-0" id="exampleFormControlTextarea2"
-                                    rows="" placeholder="Type of audience you are trying to reach. *"></input>
+                            <div class="md-form">
+                                <input type="text" id="form5" class="form-control" required>
+                                <label for="form5">Type of audience you are trying to reach.</label>
                             </div>
-                            <div class="form-group">
-                                <textarea class="form-control form-control-sm rounded-0"
-                                    id="exampleFormControlTextarea2" rows="3"
-                                    placeholder="Share any links you would like us to see for inspiration. Just paste them in this box."></textarea>
+                            <div class="md-form mb-4 pink-textarea active-pink-textarea">
+                                <textarea id="form3" class="md-textarea form-control" rows="2"></textarea>
+                                <label for="form3">Share any links you would like us to see for inspiration. Just paste
+                                    them in this box.</label>
                             </div>
                         </div>
                         <hr>
