--- a/public/styles/navbar.css
+++ b/public/styles/navbar.css
@@ -4,7 +4,7 @@
     padding: 0 2rem !important;
 }
 
-nav {
+nav.navbar {
     font-family: 'Brandon Grotesque Bold', sans-serif;
     font-size: 14px;
 }
