--- a/resources/views/projects-status.twig
+++ b/resources/views/projects-status.twig
@@ -7,7 +7,7 @@
     <div class="col">
         <div class="index header">
             <div>
-                <h1 class="">Order Status</h1>
+                <h1 class="">Project Status</h1>
             </div>
         </div>
         <!--/ Main content Header-->
