--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -154,7 +154,7 @@
             <div class="sidebar-link py-2 {% if active == "status" %}sidebar-active{% endif %}">
               <div class="">
                 <a class="text-link {% if active == "status" %}active{% endif %}"
-                  href="/thefutures/dashboard/projects-status">Project Status</a>
+                  href="/thefutures/dashboard/projects-status">Project Progress</a>
               </div>
             </div>
             <div class="sidebar-link py-2  {% if active == "order" %}sidebar-active{% endif %}">
