--- a/resources/views/projects-status.twig
+++ b/resources/views/projects-status.twig
@@ -1,5 +1,6 @@
 {% extends 'layout2.twig' %}
 {% block headlinks %}
+<link rel="stylesheet" href="/thefutures/styles/breads.css">
 {% endblock %}
 {% block content %}
 <!-- Main content Header-->
@@ -7,7 +8,7 @@
     <div class="col">
         <div class="index header">
             <div>
-                <h1 class="">Project Status</h1>
+                <h1 class="">Project Progress</h1>
             </div>
         </div>
         <!--/ Main content Header-->
@@ -19,8 +20,7 @@
                     <th scope="col">Project Name</th>
                     <th scope="col">Received</th>
                     <th scope="col">In Production</th>
-                    <th scope="col">In review</th>
-                    <th scope="col">Delivered</th>
+                    <th scope="col">Status</th>
                 </tr>
             </thead>
             <tbody>
@@ -31,9 +31,38 @@
                         </a>
                     </th>
                     <td>Mark</td>
-                    <td><button type="button" class="btn btn-default btn-circle"><i class=""></i></td>
-                    <td><button type="button" class="btn btn-success btn-circle"><i class="fa fa-check"></i></td>
-                    <td>N/A</td>
+                    <td><button type="button" class="btn btn-circle"><i class=""></i></td>
+                    <td>
+                        <div class="pulsating-dot">
+                            <div class="pulsating-dot__ripple">
+                                <span></span>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                            </div>
+                        </div>
+                    </td>
+                    <td>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">
+                        <a href="/dashboard/order-history/TC1031972989">
+                            00002
+                        </a>
+                    </th>
+                    <td>Jacob</td>
+                    <td>
+                        <div class="pulsating-dot">
+                            <div class="pulsating-dot__ripple">
+                                <span></span>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                            </div>
+                        </div>
+                    </td>
+                    <td><button type="button" class="btn btn-circle"></td>
                     <td><button type="button" class="btn btn-success btn-circle"><i class="fa fa-check"></i></td>
                 </tr>
                 <tr>
@@ -43,49 +72,104 @@
                         </a>
                     </th>
                     <td>Jacob</td>
-                    <td><button type="button" class="btn btn-default btn-circle"><i class=""></i></td>
+                    <td>
+                        <div class="pulsating-dot">
+                            <div class="pulsating-dot__ripple">
+                                <span></span>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                            </div>
+                        </div>
+                    </td>
+                    <td><button type="button" class="btn btn-circle"></td>
                     <td><button type="button" class="btn btn-success btn-circle"><i class="fa fa-check"></i></td>
-                    <td>N/A</td>
+                </tr>
+
+                <tr>
+                    <th scope="row">
+                        <a href="/dashboard/order-history/TC1031972989">
+                            00002
+                        </a>
+                    </th>
+                    <td>Jacob</td>
+                    <td>
+                        <div class="pulsating-dot">
+                            <div class="pulsating-dot__ripple">
+                                <span></span>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                            </div>
+                        </div>
+                    </td>
+                    <td><button type="button" class="btn btn-circle"></td>
                     <td><button type="button" class="btn btn-success btn-circle"><i class="fa fa-check"></i></td>
                 </tr>
                 <tr>
                     <th scope="row">
                         <a href="/dashboard/order-history/TC1031972989">
-                            00003
+                            00002
                         </a>
                     </th>
-                    <td>Larry the Bird</td>
-                    <td><button type="button" class="btn btn-default btn-circle"><i class=""></i></td>
-                    <td><button type="button" class="btn btn-success btn-circle"><i class="fa fa-check"></i></td>
-                    <td>N/A</td>
-                    <td><button type="button" class="btn btn-success btn-circle"><i class="fa fa-check"></i></td>
-                </tr>
-                <tr>
-                    <th scope="row">
-                        <a href="/dashboard/order-history/TC1031972989">
-                            00004
-                        </a>
-                    </th>
-                    <td>Larry the Bird</td>
-                    <td><button type="button" class="btn btn-default btn-circle"><i class=""></i></td>
-                    <td><button type="button" class="btn btn-success btn-circle"><i class="fa fa-check"></i></td>
-                    <td>N/A</td>
-                    <td><button type="button" class="btn btn-success btn-circle"><i class="fa fa-check"></i></td>
-                </tr>
-                <tr>
-                    <th scope="row">
-                        <a href="/thefutures/dashboard/order-history/TC1031972989">
-                            00005
-                        </a>
-                    </th>
-                    <td>Larry the Bird</td>
-                    <td><button type="button" class="btn btn-default btn-circle"><i class=""></i></td>
-                    <td><button type="button" class="btn btn-success btn-circle"><i class="fa fa-check"></i></td>
-                    <td>N/A</td>
+                    <td>Jacob</td>
+                    <td>
+                        <div class="pulsating-dot">
+                            <div class="pulsating-dot__ripple">
+                                <span></span>
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                            </div>
+                        </div>
+                    </td>
+                    <td><button type="button" class="btn btn-circle"></td>
                     <td><button type="button" class="btn btn-success btn-circle"><i class="fa fa-check"></i></td>
                 </tr>
             </tbody>
         </table>
+    </div>
+</div>
+
+<div>
+    <div class="container breadcrumbs-container">
+        <h1 class="breadcrumbs-title">Order Transcripts</h1>
+        <div class="right steps-container">
+            <ul class="breadcrumbs unstyled">
+
+                <li class="breadcrumb step-1 breadcrumb-active">
+                    <div class="breadcrumb-number">
+
+                    </div>
+                    <div class="breadcrumb-name">
+                        Add Files
+                    </div>
+                </li>
+                <li class="breadcrumb-connector">
+                    <div class="connector"></div>
+                </li>
+                <li class="breadcrumb step-2">
+                    <div class="breadcrumb-number">
+
+                    </div>
+                    <div class="breadcrumb-name">
+                        Sign In
+                    </div>
+                </li>
+                <li class="breadcrumb-connector">
+                    <div class="connector"></div>
+                </li>
+                <li class="breadcrumb step-3 last">
+                    <div class="breadcrumb-number">
+
+                    </div>
+                    <div class="breadcrumb-name">
+                        Pay
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="clear"></div>
     </div>
 </div>
 {% endblock %}
