--- a/public/styles/navbar.css
+++ b/public/styles/navbar.css
@@ -67,3 +67,26 @@ nav.navbar {
     padding: calc(.85rem + 1vh) 1.875rem !important;
     border-bottom: 1px solid #e6e6e6;
 }
+
+.breadcrumb-number {
+    background-image: none !important;
+    height: 16px !important;
+    width: 16px !important;
+    margin: auto !important;
+    border-radius: 50%
+}
+
+.breadcrumbs-container .breadcrumbs li.breadcrumb-connector .connector {
+    width: 75px;
+    margin-top: 7px;
+    margin-left: -39px
+}
+
+.breadcrumbs-container {
+    background: transparent none repeat 0 0/auto auto padding-box border-box scroll !important;
+    background: initial !important
+}
+
+.breadcrumbs-container .breadcrumbs {
+    margin-top: 35px
+}
