--- a/resources/views/projects-status.twig
+++ b/resources/views/projects-status.twig
@@ -18,6 +18,8 @@
                 <tr>
                     <th scope="col">#</th>
                     <th scope="col">Project Name</th>
+                    <th scope="col">Placed</th>
+                    <th scope="col">Placed By</th>
                     <th scope="col">Received</th>
                     <th scope="col">In Production</th>
                     <th scope="col">Status</th>
@@ -30,7 +32,10 @@
                             00001
                         </a>
                     </th>
-                    <td>Mark</td>
+
+                    <td>FAVICON for The Futures</td>
+                    <td>19/06/2019</td>
+                    <td>William</td>
                     <td><button type="button" class="btn btn-circle"><i class=""></i></td>
                     <td>
                         <div class="pulsating-dot">
@@ -43,6 +48,11 @@
                         </div>
                     </td>
                     <td>
+                        <div style="width: 100; background: #f91c52;" class="text-center">
+                            <p class="text-white mb-0">
+                                Awating Approval
+                            </p>
+                        </div>
                     </td>
                 </tr>
                 <tr>
@@ -51,7 +61,9 @@
                             00002
                         </a>
                     </th>
-                    <td>Jacob</td>
+                    <td>FAVICON for The Futures</td>
+                    <td>19/06/2019</td>
+                    <td>William</td>
                     <td>
                         <div class="pulsating-dot">
                             <div class="pulsating-dot__ripple">
@@ -71,7 +83,9 @@
                             00002
                         </a>
                     </th>
-                    <td>Jacob</td>
+                    <td>FAVICON for The Futures</td>
+                    <td>19/06/2019</td>
+                    <td>William</td>
                     <td>
                         <div class="pulsating-dot">
                             <div class="pulsating-dot__ripple">
@@ -92,7 +106,9 @@
                             00002
                         </a>
                     </th>
-                    <td>Jacob</td>
+                    <td>FAVICON for The Futures</td>
+                    <td>19/06/2019</td>
+                    <td>William</td>
                     <td>
                         <div class="pulsating-dot">
                             <div class="pulsating-dot__ripple">
@@ -112,7 +128,9 @@
                             00002
                         </a>
                     </th>
-                    <td>Jacob</td>
+                    <td>FAVICON for The Futures</td>
+                    <td>19/06/2019</td>
+                    <td>William</td>
                     <td>
                         <div class="pulsating-dot">
                             <div class="pulsating-dot__ripple">
