--- a/resources/views/projects-status.twig
+++ b/resources/views/projects-status.twig
@@ -48,9 +48,9 @@
                         </div>
                     </td>
                     <td>
-                        <div style="width: 100; background: #f91c52;" class="text-center">
+                        <div style="width: 100;" class="bg-futures text-center">
                             <p class="text-white mb-0">
-                                Awating Approval
+                                Awaiting approval
                             </p>
                         </div>
                     </td>
@@ -75,7 +75,11 @@
                         </div>
                     </td>
                     <td><button type="button" class="btn btn-circle"></td>
-                    <td><button type="button" class="btn btn-success btn-circle"><i class="fa fa-check"></i></td>
+                    <td>
+                        <div style="width: 100;" class="bg-yellow text-center">
+                            <p class="text-dark mb-0">Up Next</p>
+                        </div>
+                    </td>
                 </tr>
                 <tr>
                     <th scope="row">
@@ -97,7 +101,11 @@
                         </div>
                     </td>
                     <td><button type="button" class="btn btn-circle"></td>
-                    <td><button type="button" class="btn btn-success btn-circle"><i class="fa fa-check"></i></td>
+                    <td>
+                        <div style="width: 100;" class="bg-futures-gray text-center">
+                            <p class="text-white mb-0"> On Queue </p>
+                        </div>
+                    </td>
                 </tr>
 
                 <tr>
@@ -120,7 +128,11 @@
                         </div>
                     </td>
                     <td><button type="button" class="btn btn-circle"></td>
-                    <td><button type="button" class="btn btn-success btn-circle"><i class="fa fa-check"></i></td>
+                    <td>
+                        <div style="width: 100;" class="bg-futures-gray text-center">
+                            <p class="text-white mb-0"> On Queue </p>
+                        </div>
+                    </td>
                 </tr>
                 <tr>
                     <th scope="row">
@@ -142,7 +154,11 @@
                         </div>
                     </td>
                     <td><button type="button" class="btn btn-circle"></td>
-                    <td><button type="button" class="btn btn-success btn-circle"><i class="fa fa-check"></i></td>
+                    <td>
+                        <div style="width: 100;" class="bg-futures-gray text-center">
+                            <p class="text-white mb-0"> On Queue </p>
+                        </div>
+                    </td>
                 </tr>
             </tbody>
         </table>
