--- a/resources/views/projects-status.twig
+++ b/resources/views/projects-status.twig
@@ -48,8 +48,8 @@
                         </div>
                     </td>
                     <td>
-                        <div style="width: 100;" class="bg-futures text-center">
-                            <p class="text-white mb-0">
+                        <div style="width: 100;" class="awaiting-approval text-center">
+                            <p class="mb-0">
                                 Awaiting approval
                             </p>
                         </div>
@@ -76,8 +76,8 @@
                     </td>
                     <td><button type="button" class="btn btn-circle"></td>
                     <td>
-                        <div style="width: 100;" class="bg-yellow text-center">
-                            <p class="text-dark mb-0">Up Next</p>
+                        <div style="width: 100;" class="up-next text-center">
+                            <p class="mb-0">Up Next</p>
                         </div>
                     </td>
                 </tr>
@@ -102,8 +102,8 @@
                     </td>
                     <td><button type="button" class="btn btn-circle"></td>
                     <td>
-                        <div style="width: 100;" class="bg-futures-gray text-center">
-                            <p class="text-white mb-0"> On Queue </p>
+                        <div style="width: 100;" class="on-queue text-center">
+                            <p class="mb-0"> On Queue </p>
                         </div>
                     </td>
                 </tr>
@@ -129,8 +129,8 @@
                     </td>
                     <td><button type="button" class="btn btn-circle"></td>
                     <td>
-                        <div style="width: 100;" class="bg-futures-gray text-center">
-                            <p class="text-white mb-0"> On Queue </p>
+                        <div style="width: 100;" class="on-queue text-center">
+                            <p class="mb-0"> On Queue </p>
                         </div>
                     </td>
                 </tr>
@@ -155,8 +155,8 @@
                     </td>
                     <td><button type="button" class="btn btn-circle"></td>
                     <td>
-                        <div style="width: 100;" class="bg-futures-gray text-center">
-                            <p class="text-white mb-0"> On Queue </p>
+                        <div style="width: 100;" class="on-queue text-center">
+                            <p class="mb-0"> On Queue </p>
                         </div>
                     </td>
                 </tr>
