--- a/resources/views/projects-status.twig
+++ b/resources/views/projects-status.twig
@@ -1,6 +1,7 @@
 {% extends 'layout2.twig' %}
 {% block headlinks %}
 <link rel="stylesheet" href="/thefutures/styles/breads.css">
+<link rel="stylesheet" href="/styles/breads.css">
 {% endblock %}
 {% block content %}
 <!-- Main content Header-->
@@ -165,47 +166,6 @@
     </div>
 </div>
 
-<div>
-    <div class="container breadcrumbs-container">
-        <h1 class="breadcrumbs-title">Order Transcripts</h1>
-        <div class="right steps-container">
-            <ul class="breadcrumbs unstyled">
-
-                <li class="breadcrumb step-1 breadcrumb-active">
-                    <div class="breadcrumb-number">
-
-                    </div>
-                    <div class="breadcrumb-name">
-                        Add Files
-                    </div>
-                </li>
-                <li class="breadcrumb-connector">
-                    <div class="connector"></div>
-                </li>
-                <li class="breadcrumb step-2">
-                    <div class="breadcrumb-number">
-
-                    </div>
-                    <div class="breadcrumb-name">
-                        Sign In
-                    </div>
-                </li>
-                <li class="breadcrumb-connector">
-                    <div class="connector"></div>
-                </li>
-                <li class="breadcrumb step-3 last">
-                    <div class="breadcrumb-number">
-
-                    </div>
-                    <div class="breadcrumb-name">
-                        Pay
-                    </div>
-                </li>
-            </ul>
-        </div>
-        <div class="clear"></div>
-    </div>
-</div>
 {% endblock %}
 
 
