--- a/resources/views/projects-status.twig
+++ b/resources/views/projects-status.twig
@@ -36,7 +36,7 @@
 
                     <td>FAVICON for The Futures</td>
                     <td>19/06/2019</td>
-                    <td>William</td>
+                    <td>William Villalobos</td>
                     <td><button type="button" class="btn btn-circle"><i class=""></i></td>
                     <td>
                         <div class="pulsating-dot">
