--- a/resources/views/projects-status.twig
+++ b/resources/views/projects-status.twig
@@ -17,7 +17,7 @@
         <table id="" cellspacing="0" class="table tickets-table table-hover">
             <thead>
                 <tr>
-                    <th scope="col">#</th>
+                    <th scope="col">#ID</th>
                     <th scope="col">Project Name</th>
                     <th scope="col">Placed</th>
                     <th scope="col">Placed By</th>
