--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -141,7 +141,7 @@
           <div class="sidebar-brand">
             <a href="#">&nbsp</a>
             <div id="close-sidebar">
-              <i class="fas fa-chevron-left"></i>
+              <i class="fas fa-angle-left"></i>
             </div>
           </div>
           <div class="sidebar-menu">
