--- a/resources/views/order-history.twig
+++ b/resources/views/order-history.twig
@@ -16,83 +16,71 @@
 <!--/ Main content Header-->
 <!-- Main content Data Display-->
 <div class="data table-responsive text-nowrap">
-  <table id="" cellspacing="0" class="table table-hover">
+  <table id="" cellspacing="0" class="table tickets-table table-hover">
     <thead>
       <tr>
-        <th scope="col">Order #</th>
+        <th scope="col">#ID</th>
+        <th scope="col">Project Name</th>
         <th scope="col">Placed</th>
-        <th scope="col">Placed by</th>
-        <th scope="col">Status</th>
-        <th scope="col">Description</th>
-        <th scope="col">Size</th>
-        <th scope="col">Cost</th>
+        <th scope="col">Placed By</th>
+        <th scope="col">Direct Link</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <th scope="row">
-          <a href="/dashboard/order-history/TC1031972989">
-            TC1031972989
+          <a href="/thefutures/dashboard/order-history/TC1031972989">
+            00001
           </a>
         </th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
-        <td>@mdo</td>
-        <td>@mdo</td>
-        <td>@mdo</td>
+        <td>FAVICON for The Futures</td>
+        <td>19/06/2019</td>
+        <td>William Villalobos</td>
+        <td><a href=""><i class="fas fa-link"></i></a></td>
       </tr>
       <tr>
         <th scope="row">
           <a href="/dashboard/order-history/TC1031972989">
-            TC0376402980
+            00002
           </a>
         </th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
-        <td>@mdo</td>
-        <td>@mdo</td>
-        <td>@mdo</td>
+        <td>FAVICON for The Futures</td>
+        <td>19/06/2019</td>
+        <td>William</td>
+        <td><a href=""><i class="fas fa-link"></i></a></td>
       </tr>
       <tr>
         <th scope="row">
           <a href="/dashboard/order-history/TC1031972989">
-            TC1031972989
+            00002
           </a>
         </th>
-        <td>Larry the Bird</td>
-        <td>Larry</td>
-        <td>@twitter</td>
-        <td>@mdo</td>
-        <td>@mdo</td>
-        <td>@mdo</td>
+        <td>FAVICON for The Futures</td>
+        <td>19/06/2019</td>
+        <td>William</td>
+        <td><a href=""><i class="fas fa-link"></i></a></td>
       </tr>
       <tr>
         <th scope="row">
           <a href="/dashboard/order-history/TC1031972989">
-            TC1031972989
+            00002
           </a>
         </th>
-        <td>Larry the Bird</td>
-        <td>Larry</td>
-        <td>@twitter</td>
-        <td>@mdo</td>
-        <td>@mdo</td>
-        <td>@mdo</td>
+        <td>FAVICON for The Futures</td>
+        <td>19/06/2019</td>
+        <td>William</td>
+        <td><a href=""><i class="fas fa-link"></i></a></td>
       </tr>
       <tr>
         <th scope="row">
           <a href="/dashboard/order-history/TC1031972989">
-            TC1031972989
+            00002
           </a>
         </th>
-        <td>Larry the Bird</td>
-        <td>Larry</td>
-        <td>@twitter</td>
-        <td>@mdo</td>
-        <td>@mdo</td>
-        <td>@mdo</td>
+        <td>FAVICON for The Futures</td>
+        <td>19/06/2019</td>
+        <td>William</td>
+        <td><a href=""><i class="fas fa-link"></i></a></td>
       </tr>
     </tbody>
   </table>
