--- a/resources/views/show-order-history.twig
+++ b/resources/views/show-order-history.twig
@@ -2,12 +2,11 @@
 
 {% block content %}
 <div class="header-2">
-    <h1 class="main-title">Order: TC1031972989</h1>
+    <h1 class="main-title">#ID: 00001</h1>
 </div>
 <div>
-    <b style="font-weight: 700; margin-right: 20px;">Reference:</b>
-    Lorem ipsum dolor
-    <a href="#" style="margin-left: 20px;">Edit</a>
+    <b style="font-weight: 700; margin-right: 10px;">Project name:</b>
+    FAVICON for The Futures
 </div>
 <div>
     <div class="card my-5">
