--- a/resources/views/layout2.twig
+++ b/resources/views/layout2.twig
@@ -182,6 +182,13 @@
             <div class="sidebar-link py-2">
               <div class="">
                 <a class="text-link" class="text-link" href="#">
+                  Shuttle (Soon)
+                </a>
+              </div>
+            </div>
+            <div class="sidebar-link py-2">
+              <div class="">
+                <a class="text-link" class="text-link" href="#">
                   Transaction History
                 </a>
               </div>
