--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -135,8 +135,8 @@ h2 {
 }
 
 h1 {
-    font-size: 28px;
-    font-weight: bold;
+    font-size: 28px !important;
+    font-weight: bold !important;
 }
 
 tbody {
