--- a/resources/views/projects-status.twig
+++ b/resources/views/projects-status.twig
@@ -21,8 +21,8 @@
                     <th scope="col">Project Name</th>
                     <th scope="col">Placed</th>
                     <th scope="col">Placed By</th>
-                    <th scope="col">Received</th>
-                    <th scope="col">In Production</th>
+                    <th scope="col" class="text-center">Received</th>
+                    <th scope="col" class="text-center">In Production</th>
                     <th scope="col">Status</th>
                 </tr>
             </thead>
@@ -37,8 +37,8 @@
                     <td>FAVICON for The Futures</td>
                     <td>19/06/2019</td>
                     <td>William Villalobos</td>
-                    <td><button type="button" class="btn btn-circle"><i class=""></i></td>
-                    <td>
+                    <td class="text-center"><button type="button" class="btn btn-circle"><i class=""></i></td>
+                    <td class="text-center">
                         <div class="pulsating-dot">
                             <div class="pulsating-dot__ripple">
                                 <span></span>
@@ -65,7 +65,7 @@
                     <td>FAVICON for The Futures</td>
                     <td>19/06/2019</td>
                     <td>William</td>
-                    <td>
+                    <td class="text-center">
                         <div class="pulsating-dot">
                             <div class="pulsating-dot__ripple">
                                 <span></span>
@@ -75,7 +75,7 @@
                             </div>
                         </div>
                     </td>
-                    <td><button type="button" class="btn btn-circle"></td>
+                    <td class="text-center"><button type="button" class="btn btn-circle"></td>
                     <td>
                         <div style="width: 100;" class="up-next text-center">
                             <p class="mb-0">Up Next</p>
@@ -101,7 +101,7 @@
                             </div>
                         </div>
                     </td>
-                    <td><button type="button" class="btn btn-circle"></td>
+                    <td class="text-center"><button type="button" class="btn btn-circle"></td>
                     <td>
                         <div style="width: 100;" class="on-queue text-center">
                             <p class="mb-0"> On Queue </p>
@@ -128,7 +128,7 @@
                             </div>
                         </div>
                     </td>
-                    <td><button type="button" class="btn btn-circle"></td>
+                    <td class="text-center"><button type="button" class="btn btn-circle"></td>
                     <td>
                         <div style="width: 100;" class="on-queue text-center">
                             <p class="mb-0"> On Queue </p>
@@ -154,7 +154,7 @@
                             </div>
                         </div>
                     </td>
-                    <td><button type="button" class="btn btn-circle"></td>
+                    <td class="text-center"><button type="button" class="btn btn-circle"></td>
                     <td>
                         <div style="width: 100;" class="on-queue text-center">
                             <p class="mb-0"> On Queue </p>
