--- a/resources/views/show-order-history.twig
+++ b/resources/views/show-order-history.twig
@@ -1,5 +1,7 @@
 {% extends 'layout2.twig'  %}
+{% block headlinks %}
 
+{% endblock %}
 {% block content %}
 <div class="row">
     <div class="col-8">
